--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div class="daily-forecast" id="daily-forecast"></div>
             </div>
         </main>
-        <footer><p>© Copyright OSPranto Tech | 2026</p></footer>
+        <footer><p>© Copyright OSPranto Tech | <span id="copyright-year"></span></p></footer>
     </div>
     <script src="script.js"></script>
 </body>
